k8s/gateway/gatewayclass.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: aws-alb
  labels:
    app.kubernetes.io/part-of: pulselog
spec:
  # controllerName tells K8s which controller handles this GatewayClass
  # AWS Load Balancer Controller watches for this exact string
  # and creates/manages ALBs for any Gateway referencing this class
  controllerName: eks.amazonaws.com/alb
