k8s/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pulselog-route
  namespace: pulselog
  labels:
    app.kubernetes.io/part-of: pulselog
spec:
  # attach this route to pulselog-gateway
  parentRefs:
    - name: pulselog-gateway
      namespace: pulselog

  rules:
    # Rule 1 — /api/* → backend-svc
    # MORE SPECIFIC rule must come first
    # matches any path starting with /api/
    - matches:
        - path:
            type: PathPrefix
            value: /api
      backendRefs:
        - name: backend-svc
          port: 5000

    # Rule 2 — /* → frontend-svc
    # CATCH-ALL rule comes last
    # matches everything that didn't match /api/*
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend-svc
          port: 8080
